# Artificial-Intelligence-

./: .gitignore  README.md  pyproject.toml
old_src/src/agent/: base.py  minimax_agent.py
old_src/src/game/: state.py
old_src/src/game_agent_project.egg-info/: PKG-INFO  SOURCES.txt
old_src/tests/: test_agents.py
src/: algorithm.py  benchmark.py  evaluation.py  game_engine.py  kalaha_gui.py  main.py  minmax.py  minmax_pruning.py
src/agent/: random_agent.py
src/common/: types.py
src/game/: engine.py  rules.py
src/game_agent_project.egg-info/: top_level.txt
src/ui/: cli.py  pygame_ui.py  renderer.py
tests/: test_engine.py
