[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-agent-project"
version = "0.1.0"
description = "Starter project for a game with UI and AI agents"
requires-python = ">=3.10"
dependencies = ["pygame>=2.5"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
